# TLE

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  run.sh
tle/: __main__.py
tle/cogs/: contests.py  handles.py  meta.py
tle/util/: cache_system2.py  codeforces_api.py  discord_common.py  font_downloader.py
tle/util/db/: user_db_conn.py
