[project]
name = "TLE"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
  # Discord bot core
  "discord.py == 1.7.3",
  "aiohttp < 3.8",
  "aiocache",
  # Data & plotting
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  # Images
  "pillow",
  # Web scraping
  "lxml",
  # Environment variables
  "python-dotenv",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tle*"]
exclude = ["data*", "logs*", "extra*"]
